codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_halfwidth_sound_marks.snap
---
source: tui/src/history_cell/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 4 },
    content: [
        "  >_ Codex vtest                                                                ",
        "  GPT 5 ｶﾞ ﾊﾟ  /model to change                                                 ", // hidden by multi-width symbols: [(9, " "), (12, " ")]
        "  project                                                                       ",
        "  Guarded access  /permissions to review                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
