codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  >_ Codex vtest
  GPT 5  /model to change
  /tmp/project
  [!] Unrestricted access  /permissions to change
