codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  >_ Codex v0.0.0
  GPT 5  /model to change
  /tmp/project
  Guarded access  /permissions to review

  Tip: Model just became available
