codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Ran 1 command
  └ a_very_long_token_w…
