codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
  Update available  v0.0.0 -> v9.9.9
  Restart Codex and choose Update now to install it.
  Release notes  https://github.com/openai/codex/releases/latest
